add changes to index.html and created index.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SalesOps</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+    <title>CRM</title>
 </head>
 <body>
+<header>
+    <div>
+        Sales OPS CRM
+    </div>
+</header>
+<aside class="sidebar">
+    <div class="profile">
+        <img>
+        <h3>Anamika Roy</h3>
+        <p>Designer</p>
+    </div>
+    <ul>
+        <li><a href="#" class="active">
+            <span class="icon"></span>
+            <span class="item">Dashboard</span>
+        </a></li>
+        <li><a href="#">
+            <span class="icon"></span>
+            <span class="item">About</span>
+            </a></li>
 
+    </ul>
+</aside>
+<main></main>
 </body>
 </html>
