--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link href="index.css" rel="stylesheet">
     <title>CRM</title>
 </head>
 <body>
@@ -21,14 +21,14 @@
         <p>Designer</p>
     </div>
     <ul>
-        <li><a href="#" class="active">
+        <li><a class="active" href="#">
             <span class="icon"></span>
             <span class="item">Dashboard</span>
         </a></li>
         <li><a href="#">
             <span class="icon"></span>
             <span class="item">About</span>
-            </a></li>
+        </a></li>
 
     </ul>
 </aside>
