--- a/index.html
+++ b/index.html
@@ -6,32 +6,46 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="index.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <title>CRM</title>
 </head>
 <body>
-<header>
-    <div>
-        Sales OPS CRM
+<header class="navbar fixed-top flex-md-nowrap">
+    <div class="d-flex" style="margin-top: 20px">
+        <img class="mx-3 rounded-circle">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white" href="#">Company name</a>
+    </div>
+    <div class="d-flex ml-auto">
+        <input aria-label="Search" class="form-control form-control-dark" style="width: 300px; border-radius: 24px" placeholder="Search" type="text">
+        <ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link" href="#">Sign out</a>
+            </li>
+        </ul>
     </div>
 </header>
 <aside class="sidebar">
-    <div class="profile">
-        <img>
-        <h3>Anamika Roy</h3>
-        <p>Designer</p>
-    </div>
-    <ul>
-        <li><a class="active" href="#">
-            <span class="icon"></span>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="#">
+            <span id="svg"><i class="bi bi-cast"></i></span>
             <span class="item">Dashboard</span>
         </a></li>
-        <li><a href="#">
-            <span class="icon"></span>
+        <li class="nav-item"><a class=" nav-link" href="#">
+            <span class="svg"></span>
             <span class="item">About</span>
         </a></li>
-
+        <li class="nav-item"><a class=" nav-link" href="#">
+            <span class="svg"></span>
+            <span class="item">About</span>
+        </a></li>
+        <li class="nav-item"><a class=" nav-link" href="#">
+            <span class="svg"></span>
+            <span class="item">About</span>
+        </a></li>
     </ul>
 </aside>
-<main></main>
+<main>
+</main>
 </body>
 </html>
