--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 </head>
 <body>
 <header class="navbar fixed-top flex-md-nowrap">
-    <div class="d-flex" style="margin-top: 20px">
-        <img class="mx-3 rounded-circle">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white" href="#">Company name</a>
+    <div class="d-flex">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
     </div>
     <div class="d-flex ml-auto">
         <input aria-label="Search" class="form-control form-control-dark" style="width: 300px; border-radius: 24px" placeholder="Search" type="text">
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link" href="#">Sign out</a>
+                <a class="nav-link text-white" href="#">Sign out</a>
             </li>
         </ul>
     </div>
