--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="index.css" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
     <title>CRM</title>
 </head>
 <body>
@@ -16,7 +18,8 @@
         <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
     </div>
     <div class="d-flex ml-auto">
-        <input aria-label="Search" class="form-control form-control-dark" style="width: 300px; border-radius: 24px" placeholder="Search" type="text">
+        <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
+               style="width: 300px; border-radius: 24px" type="text">
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                 <a class="nav-link text-white" href="#">Sign out</a>
@@ -26,25 +29,22 @@
 </header>
 <aside class="sidebar">
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#">
-            <span id="svg"><i class="bi bi-cast"></i></span>
-            <span class="item">Dashboard</span>
-        </a></li>
+        <li class="nav-item">
+
+            <a class="nav-link active item" href="#"><i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="svg"></span>
             <span class="item">About</span>
         </a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="svg"></span>
             <span class="item">About</span>
         </a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="svg"></span>
             <span class="item">About</span>
         </a></li>
     </ul>
 </aside>
-<main>
+<main class="content-page">
+    <h5 style="color: #323A46; font-family: Poppins sans-serif;text-transform: uppercase;">Dashboard</h5>
 </main>
 </body>
 </html>
