update index.html and index.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="d-flex ml-auto" style="align-items: center">
         <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
                style="width: 300px; border-radius: 24px; height: 38px" type="text">
-        <a aria-expanded="false" aria-haspopup="false" class="nav-link dropdown-toggle nav-user me-0 waves-effect waves-light text-white"
+        <a aria-expanded="false" aria-haspopup="false"
+           class="nav-link dropdown-toggle nav-user me-0 waves-effect waves-light text-white"
            data-bs-toggle="dropdown" href="#"
            role="button" style="font-size: 13px">
             <img class="rounded-circle" style="background: white; width: 32px; height: 32px">
@@ -52,14 +53,43 @@
 </aside>
 <main class="content-page bg-dark">
     <h5 style="color: white; font-family: Poppins sans-serif;text-transform: uppercase;">Dashboard</h5>
-    <div class="card-body bg-warning" style="width: 300px; margin-top: 5%">
-        <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-            <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
-            <div>
-                <h2 class="text-white mt-2 p-4">$92,847</h2>
-                <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Statistics</p>
+    <div class="d-flex">
+        <div class="card-body bg-warning" style="width: 300px; margin-top: 5%; margin-right: 20px">
+            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
+                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <div>
+                    <h2 class="text-white mt-2 p-4">$92,847</h2>
+                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Statistics</p>
+                </div>
             </div>
-        </div> <!-- end row-->
+        </div>
+        <div class="card-body bg-primary" style="width: 300px; margin: 5% 20px 0 20px">
+            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
+                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <div>
+                    <h2 class="text-white mt-2 p-4">56</h2>
+                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Target</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-body bg-danger" style="width: 300px; margin: 5% 20px 0 20px">
+            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
+                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <div>
+                    <h2 class="text-white mt-2 p-4">$92,847</h2>
+                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Goals</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-body bg-success" style="width: 300px; margin: 5% 20px 0 20px">
+            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
+                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <div>
+                    <h2 class="text-white mt-2 p-4">$92,847</h2>
+                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Users</p>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 </body>
