--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div class="d-flex">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
     </div>
+    <a aria-expanded="false" aria-haspopup="false" class="nav-link dropdown-toggle waves-effect waves-light text-white" data-bs-toggle="dropdown"
+       href="#" role="button" style="color: #FFFFFF99">
+        Add New
+        <i class="mdi mdi-chevron-down"></i>
+    </a>
     <div class="d-flex ml-auto" style="align-items: center">
         <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
                style="width: 300px; border-radius: 24px; height: 38px" type="text">
@@ -37,9 +42,8 @@
 <aside class="sidebar">
     <ul class="navbar-nav">
         <li class="nav-item">
-
-            <a class="nav-link active item" href="#"><i class="fab fa-dashcube"
-                                                        style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
+            <a class="nav-link active item" href="#">
+                <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">About</span>
         </a></li>
@@ -65,7 +69,7 @@
         </div>
         <div class="card-body bg-primary" style="width: 300px; margin: 5% 20px 0 20px">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <i class="fas fa-bullseye avatar-title text-white" style="font-size: 48px"></i>
                 <div>
                     <h2 class="text-white mt-2 p-4">56</h2>
                     <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Target</p>
@@ -74,23 +78,28 @@
         </div>
         <div class="card-body bg-danger" style="width: 300px; margin: 5% 20px 0 20px">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <i class="fab fa-superpowers avatar-title text-white" style="font-size: 48px"></i>
                 <div>
-                    <h2 class="text-white mt-2 p-4">$92,847</h2>
+                    <h2 class="text-white mt-2 p-4">847</h2>
                     <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Goals</p>
                 </div>
             </div>
         </div>
         <div class="card-body bg-success" style="width: 300px; margin: 5% 20px 0 20px">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
+                <i class="fas fa-users avatar-title text-white" style="font-size: 48px"></i>
                 <div>
-                    <h2 class="text-white mt-2 p-4">$92,847</h2>
+                    <h2 class="text-white mt-2 p-4">928</h2>
                     <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Users</p>
                 </div>
             </div>
         </div>
     </div>
+
+
 </main>
+
+
+<script src="Graph.js"></script>
 </body>
 </html>
