--- a/index.html
+++ b/index.html
@@ -17,11 +17,52 @@
     <div class="d-flex">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
     </div>
-    <a aria-expanded="false" aria-haspopup="false" class="nav-link dropdown-toggle waves-effect waves-light text-white" data-bs-toggle="dropdown"
-       href="#" role="button" style="color: #FFFFFF99">
+
+
+
+    <a  class="nav-link dropdown-toggle waves-effect waves-light text-white"
+       data-bs-toggle="dropdown" id="Addnew" href="#" role="button" onclick="fun1()" >
         Add New
         <i class="mdi mdi-chevron-down"></i>
     </a>
+    <div class="dropdown-menu show" data-popper-placement="bottom-start" style="display: none;">
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item">
+            <i class="fe-briefcase me-1"></i>
+            <span>New Projects</span>
+        </a>
+
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item">
+            <i class="fe-user me-1"></i>
+            <span>Create Users</span>
+        </a>
+
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item">
+            <i class="fe-bar-chart-line- me-1"></i>
+            <span>Revenue Report</span>
+        </a>
+
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item">
+            <i class="fe-settings me-1"></i>
+            <span>Settings</span>
+        </a>
+
+        <div class="dropdown-divider"></div>
+
+        <!-- item-->
+        <a href="javascript:void(0);" class="dropdown-item">
+            <i class="fe-headphones me-1"></i>
+            <span>Help &amp; Support</span>
+        </a>
+
+    </div>
+
+
+
+
     <div class="d-flex ml-auto" style="align-items: center">
         <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
                style="width: 300px; border-radius: 24px; height: 38px" type="text">
@@ -34,7 +75,7 @@
         </a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link text-white" href="#" style="font-size: 13px">Sign out</a>
+                <a class="nav-link text-white" href="./Login/loginPage.html" style="font-size: 13px">Sign out</a>
             </li>
         </ul>
     </div>
@@ -96,10 +137,66 @@
         </div>
     </div>
 
+    <div class="card-body">
+        <div class="dropdown float-end">
+            <div class="dropdown-menu dropdown-menu-end">
+                <!-- item-->
+                <a class="dropdown-item" href="javascript:void(0);">Sales Report</a>
+                <!-- item-->
+                <a class="dropdown-item" href="javascript:void(0);">Export Report</a>
+                <!-- item-->
+                <a class="dropdown-item" href="javascript:void(0);">Profit</a>
+                <!-- item-->
+                <a class="dropdown-item" href="javascript:void(0);">Action</a>
+            </div>
+        </div>
 
+        <h4 class="header-title mb-3 text-white">Product License</h4>
+        <div class="position-relative">
+            <div class="row align-items-center">
+                <div class="col-xl-5">
+                    <h5 class="text-muted">Standard <span class="text-muted fw-normal"> - Single Site</span> <b class="px-2">-</b> <span
+                            class="text-muted">30%</span></h5>
+                </div>
+                <div class="col-xl-7">
+                    <div class="progress" style="height: 6px;">
+                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="30" class="progress-bar bg-info"
+                             role="progressbar" style="width: 30%;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mt-2">
+                <div class="col-xl-5">
+                    <h5 class="text-muted">Multisite <span class="text-muted fw-normal"> - Unlimited sites</span> <b class="px-2">-</b>
+                        <span class="text-muted">60%</span></h5>
+                </div>
+                <div class="col-xl-7">
+                    <div class="progress" style="height: 6px;">
+                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" class="progress-bar bg-warning"
+                             role="progressbar" style="width: 60%;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mt-2">
+                <div class="col-xl-5">
+                    <h5 class="text-muted">Extended <span class="text-muted fw-normal"> - For paying users</span> <b class="px-2">-</b>
+                        <span class="text-muted">85%</span></h5>
+                </div>
+                <div class="col-xl-7">
+                    <div class="progress" style="height: 6px;">
+                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="85" class="progress-bar bg-danger"
+                             role="progressbar" style="width: 85%;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 
 <script src="Graph.js"></script>
+<script src="DashboardHandlers.js"></script>
 </body>
 </html>
