--- a/index.html
+++ b/index.html
@@ -72,6 +72,112 @@
             <span class="badge bg-danger rounded-circle noti-icon-badge"
                   style="position: relative; transform: translateY(-10px) translateX(-5px);">5</span>
         </a>
+        <div class="dropdown-menu dropdown-menu-end dropdown-lg show" data-popper-placement="bottom-end"
+             style="height: 400px; overflow: hidden; transform: translateX(900px)">
+
+            <!-- item-->
+            <div class="dropdown-item noti-title">
+                <h5 class="m-0">
+                            <span class="float-end">
+                                <a class="text-dark" href="">
+                                    <small>Clear All</small>
+                                </a>
+                            </span>Notification
+                </h5>
+            </div>
+
+            <div class="noti-scroll" data-simplebar="init">
+                <div class="simplebar-wrapper" style="margin: 0px;">
+                    <div class="simplebar-height-auto-observer-wrapper">
+                        <div class="simplebar-height-auto-observer"></div>
+                    </div>
+                    <div class="simplebar-mask">
+                        <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+                            <div class="simplebar-content-wrapper" style="height: auto; overflow: hidden scroll;">
+                                <div class="simplebar-content" style="padding: 0px;">
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item active" href="javascript:void(0);">
+                                        <div class="notify-icon">
+                                            <img alt="" class="img-fluid rounded-circle"></div>
+                                        <p class="notify-details">Cristina Pride</p>
+                                        <p class="text-muted mb-0 user-msg">
+                                            <small>Hi, How are you? What about our next meeting</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-primary">
+                                            <i class="mdi mdi-comment-account-outline"></i>
+                                        </div>
+                                        <p class="notify-details">Caleb Flakelar commented on Admin
+                                            <small class="text-muted">1 min ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon">
+                                            <img alt="" class="img-fluid rounded-circle"></div>
+                                        <p class="notify-details">Karen Robinson</p>
+                                        <p class="text-muted mb-0 user-msg">
+                                            <small>Wow ! this admin looks good and awesome design</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-warning">
+                                            <i class="mdi mdi-account-plus"></i>
+                                        </div>
+                                        <p class="notify-details">New user registered.
+                                            <small class="text-muted">5 hours ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-info">
+                                            <i class="mdi mdi-comment-account-outline"></i>
+                                        </div>
+                                        <p class="notify-details">Caleb Flakelar commented on Admin
+                                            <small class="text-muted">4 days ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-secondary">
+                                            <i class="mdi mdi-heart"></i>
+                                        </div>
+                                        <p class="notify-details">Carlos Crouch liked
+                                            <b>Admin</b>
+                                            <small class="text-muted">13 days ago</small>
+                                        </p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="simplebar-placeholder" style="width: auto; height: 424px;"></div>
+                </div>
+                <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
+                    <div class="simplebar-scrollbar" style="width: 0px; display: none;"></div>
+                </div>
+                <div class="simplebar-track simplebar-vertical" style="visibility: visible;">
+                    <div class="simplebar-scrollbar"
+                         style="height: 124px; display: block; transform: translate3d(0px, 0px, 0px);"></div>
+                </div>
+            </div>
+
+            <!-- All-->
+            <a class="dropdown-item text-center text-primary notify-item notify-all" href="javascript:void(0);">
+                View all
+                <i class="fe-arrow-right"></i>
+            </a>
+
+        </div>
 
         <!--Name option-->
         <a class="nav-link dropdown-toggle nav-user me-0 waves-effect waves-light text-white"
@@ -89,7 +195,6 @@
         </ul>
     </div>
 </header>
-
 
 
 <aside class="sidebar">
@@ -113,7 +218,7 @@
 <main class="content-page bg-dark">
     <h5 style="color: white; font-family: Poppins sans-serif;text-transform: uppercase;">Dashboard</h5>
 
-<!--Cards-->
+    <!--Cards-->
     <div class="d-flex">
         <div class="card-body bg-warning" style="width: 300px; margin-top: 5%; margin-right: 20px">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
@@ -124,7 +229,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body bg-primary" style="width: 300px; margin: 5% 20px 0 20px">
+        <div class="card-body" style="width: 300px; margin: 5% 20px 0 20px; background: orangered">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
                 <i class="fas fa-bullseye avatar-title text-white" style="font-size: 48px"></i>
                 <div>
@@ -154,7 +259,7 @@
     </div>
 
 
-<!--Progress bar-->
+    <!--Progress bar-->
     <div class="card-body">
         <div class="dropdown float-end">
             <div class="dropdown-menu dropdown-menu-end">
@@ -216,15 +321,7 @@
     </div>
 
 
-
-
-
-
-
 </main>
-
-
-<script src="Graph.js"></script>
 <script src="DashboardHandlers.js"></script>
 </body>
 </html>
