--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
         <!--Notification icon-->
         <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
-           href="#" role="button">
+           href="#" role="button" onclick="fun2()">
             <i class="far fa-bell noti-icon"></i>
             <span class="badge bg-danger rounded-circle noti-icon-badge"
                   style="position: relative; transform: translateY(-10px) translateX(-5px);">5</span>
         </a>
         <div class="dropdown-menu dropdown-menu-end dropdown-lg show" data-popper-placement="bottom-end"
-             style="height: 400px; overflow: hidden; transform: translateX(900px)">
+             style="height: 400px; overflow: hidden; transform: translateX(900px); display: none;">
 
             <!-- item-->
             <div class="dropdown-item noti-title">
