--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!--Notification icon-->
         <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
-           href="#" role="button" onclick="fun2()">
+           href="#" role="button" onclick="fun2(this)">
             <i class="far fa-bell noti-icon"></i>
             <span class="badge bg-danger rounded-circle noti-icon-badge"
                   style="position: relative; transform: translateY(-10px) translateX(-5px);">5</span>
