--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body" style="width: 300px; margin: 5% 20px 0 20px; background: orangered">
+        <div class="card-body" style="width: 300px; margin: 5% 20px 0 20px; background: linear-gradient(90deg,#2193b0,#6dd5ed)">
             <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
                 <i class="fas fa-bullseye avatar-title text-white" style="font-size: 48px"></i>
                 <div>
