--- a/Table/Table.html
+++ b/Table/Table.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <link href="index.css" rel="stylesheet">
+    <link href="Table.css" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -189,7 +189,7 @@
         <!-- Login Functionality-->
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link text-white" href="./Login/loginPage.html" id="SignIn" style="font-size: 13px">Sign
+                <a class="nav-link text-white" href="../Login/loginPage.html" id="SignIn" style="font-size: 13px">Sign
                     out</a>
             </li>
         </ul>
@@ -200,13 +200,13 @@
 <aside class="sidebar">
     <ul class="navbar-nav side-menu">
         <li class="nav-item">
-            <a class="nav-link active item" href="#">
+            <a class="nav-link" href="../index.html">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">About</span>
         </a></li>
-        <li class="nav-item"><a class=" nav-link" href="./Table/Table.html">
-            <i class="fas fa-table" style="font-size: 20px; padding: 0 5px"></i>Table</a></li>
+        <li class="nav-item "><a class=" nav-link active item" href="#">
+            <i class="fas fa-table" style="font-size: 20px; padding: 0 10px"></i>Table</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">Settings</span>
         </a></li>
@@ -214,113 +214,39 @@
 </aside>
 
 
-<main class="content-page bg-dark">
-    <h5 style="color: white; font-family: Poppins sans-serif;text-transform: uppercase;">Dashboard</h5>
-
-    <!--Cards-->
-    <div class="d-flex">
-        <div class="card-body bg-warning" style="width: 300px; margin-top: 5%; margin-right: 20px">
-            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-chart-bar avatar-title text-white" style="font-size: 48px"></i>
-                <div>
-                    <h2 class="text-white mt-2 p-4">$92,847</h2>
-                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Statistics</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-body" style="width: 300px; margin: 5% 20px 0 20px; background: linear-gradient(90deg,#2193b0,#6dd5ed)">
-            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-bullseye avatar-title text-white" style="font-size: 48px"></i>
-                <div>
-                    <h2 class="text-white mt-2 p-4">56</h2>
-                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Target</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-body bg-danger" style="width: 300px; margin: 5% 20px 0 20px">
-            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-dot-circle avatar-title text-white" style="font-size: 48px"></i>
-                <div>
-                    <h2 class="text-white mt-2 p-4">847</h2>
-                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Goals</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-body bg-success" style="width: 300px; margin: 5% 20px 0 20px">
-            <div class="avatar-lg rounded-circle bg-soft-light d-flex" style="align-items: center;">
-                <i class="fas fa-users avatar-title text-white" style="font-size: 48px"></i>
-                <div>
-                    <h2 class="text-white mt-2 p-4">928</h2>
-                    <p class="text-white mb-0 text-truncate" style="margin-top: -20px; margin-left: 25px">Users</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--Progress bar-->
-    <div class="card-body">
-        <div class="dropdown float-end">
-            <div class="dropdown-menu dropdown-menu-end">
-                <!-- item-->
-                <a class="dropdown-item" href="javascript:void(0);">Sales Report</a>
-                <!-- item-->
-                <a class="dropdown-item" href="javascript:void(0);">Export Report</a>
-                <!-- item-->
-                <a class="dropdown-item" href="javascript:void(0);">Profit</a>
-                <!-- item-->
-                <a class="dropdown-item" href="javascript:void(0);">Action</a>
-            </div>
-        </div>
-
-        <h4 class="header-title mb-3 text-white">Product License</h4>
-        <div class="position-relative">
-            <div class="row align-items-center">
-                <div class="col-xl-5">
-                    <h5 class="text-muted">Standard <span class="text-muted fw-normal"> - Single Site</span> <b
-                            class="px-2">-</b> <span
-                            class="text-muted">30%</span></h5>
-                </div>
-                <div class="col-xl-7">
-                    <div class="progress" style="height: 6px;">
-                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="30" class="progress-bar bg-info"
-                             role="progressbar" style="width: 30%;"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row align-items-center mt-2">
-                <div class="col-xl-5">
-                    <h5 class="text-muted">Multisite <span class="text-muted fw-normal"> - Unlimited sites</span> <b
-                            class="px-2">-</b>
-                        <span class="text-muted">60%</span></h5>
-                </div>
-                <div class="col-xl-7">
-                    <div class="progress" style="height: 6px;">
-                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" class="progress-bar bg-warning"
-                             role="progressbar" style="width: 60%;"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row align-items-center mt-2">
-                <div class="col-xl-5">
-                    <h5 class="text-muted">Extended <span class="text-muted fw-normal"> - For paying users</span> <b
-                            class="px-2">-</b>
-                        <span class="text-muted">85%</span></h5>
-                </div>
-                <div class="col-xl-7">
-                    <div class="progress" style="height: 6px;">
-                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="85" class="progress-bar bg-danger"
-                             role="progressbar" style="width: 85%;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
+<main class="content bg-dark">
+    <table class="table table-dark">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+        </tr>
+        </tbody>
+    </table>
 </main>
-<script src="DashboardHandlers.js"></script>
+
+<script src="../DashboardHandlers.js"></script>
 </body>
 </html>
