adding forgot password and update login form

--- a/Login/loginPage.html
+++ b/Login/loginPage.html
@@ -8,61 +8,95 @@
     <title>CRM</title>
 </head>
 <body>
-<section class="h-100 gradient-form" style="background-color: #eee;">
-    <div class="container py-5 h-100">
+<section class="vh-100">
+    <div class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-xl-10">
-                <div class="card rounded-3 text-black">
-                    <div class="row g-0">
-                        <div class="col-lg-6">
-                            <div class="card-body p-md-5 mx-md-4">
+            <div class="col-md-9 col-lg-6 col-xl-5">
+                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png" class="img-fluid"
+                     alt="Sample image">
+            </div>
+            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                <form>
+<!--                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">-->
+<!--                        <p class="lead fw-normal mb-0 me-3">Sign in with</p>-->
+<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
+<!--                            <i class="fab fa-facebook-f"></i>-->
+<!--                        </button>-->
 
-                                <div class="text-center">
-                                    <img alt="logo" style="width: 185px;">
-                                    <h4 class="mt-1 mb-5 pb-1">We are Sales OPS CRM Team</h4>
-                                </div>
-                                <form>
-                                    <p>Please login to your account</p>
-                                    <div class="form-outline mb-4">
-                                        <label class="form-label" for="form2Example11">Username</label>
-                                        <input class="form-control" id="form2Example11"
-                                               placeholder="Phone number or email address"
-                                               type="email"/>
+<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
+<!--                            <i class="fab fa-twitter"></i>-->
+<!--                        </button>-->
 
-                                    </div>
+<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
+<!--                            <i class="fab fa-linkedin-in"></i>-->
+<!--                        </button>-->
+<!--                    </div>-->
 
-                                    <div class="form-outline mb-4">
-                                        <label class="form-label" for="form2Example22">Password</label>
-                                        <input class="form-control" id="form2Example22" placeholder="Password"
-                                               type="password"/>
-                                    </div>
-
-                                    <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                type="button">Log in
-                                        </button>
-                                        <br>
-                                        <a class="text-muted" href="#!">Forgot password?</a>
-                                    </div>
-
-
-                                </form>
-
-                            </div>
-                        </div>
-                        <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                <h4 class="mb-4">We are more than just a company</h4>
-                                <p class="small mb-0">"The ease and simplicity of the program and the way that the Sales OPS
-                                    Team have continued to develop solutions around and integrated with the CRM.
-                                    From the laptop device the automated tracking is Fabulous."</p>
-                            </div>
-                        </div>
+                    <div class="divider d-flex align-items-center my-4">
+                        <p class="text-center fw-bold mx-3 mb-0">We are SalesOps Team</p>
                     </div>
-                </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" id="form3Example3" class="form-control form-control-lg"
+                               placeholder="Enter a valid email address" required/>
+                        <label class="form-label" for="form3Example3">Email address</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-3">
+                        <input type="password" id="form3Example4" class="form-control form-control-lg"
+                               placeholder="Enter password"  required/>
+                        <label class="form-label" for="form3Example4">Password</label>
+                    </div>
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <!-- Checkbox -->
+                        <div class="form-check mb-0">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+                            <label class="form-check-label" for="form2Example3">
+                                Remember me
+                            </label>
+                        </div>
+                        <a href="ForgotPassword.html" class="text-body">Forgot password?</a>
+                    </div>
+
+                    <div class="text-center text-lg-start mt-4 pt-2">
+                        <button type="submit" class="btn btn-primary btn-lg" id="myButton"
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+<!--                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"-->
+<!--                                                                                          class="link-danger">Register</a></p>-->
+                    </div>
+
+                </form>
             </div>
         </div>
     </div>
+    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+        <!-- Copyright -->
+        <div class="text-white mb-3 mb-md-0">
+            Copyright © 2020. All rights reserved.
+        </div>
+        <!-- Copyright -->
+
+        <!-- Right -->
+<!--        <div>-->
+<!--            <a href="#!" class="text-white me-4">-->
+<!--                <i class="fab fa-facebook-f"></i>-->
+<!--            </a>-->
+<!--            <a href="#!" class="text-white me-4">-->
+<!--                <i class="fab fa-twitter"></i>-->
+<!--            </a>-->
+<!--            <a href="#!" class="text-white me-4">-->
+<!--                <i class="fab fa-google"></i>-->
+<!--            </a>-->
+<!--            <a href="#!" class="text-white">-->
+<!--                <i class="fab fa-linkedin-in"></i>-->
+<!--            </a>-->
+<!--        </div>-->
+        <!-- Right -->
+    </div>
 </section>
+
 </body>
 </html>
