--- a/New Student/NewStudent.html
+++ b/New Student/NewStudent.html
@@ -6,6 +6,7 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="../index.css" rel="stylesheet">
+    <link rel="stylesheet" href="NewStudent.css">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -27,9 +28,9 @@
     </a>
     <div class="dropdown-menu show" data-popper-placement="bottom-start" style="display: none;">
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="#">
             <i class="fe-briefcase me-1"></i>
-            <span>New Projects</span>
+            <span>Add New Student</span>
         </a>
 
         <!-- item-->
@@ -67,7 +68,7 @@
 
         <!--Notification icon-->
         <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
-           href="#" role="button" onclick="fun2()">
+           href="#" onclick="fun2()" role="button">
             <i class="far fa-bell noti-icon"></i>
             <span class="badge bg-danger rounded-circle noti-icon-badge"
                   style="position: relative; transform: translateY(-10px) translateX(-5px);">5</span>
@@ -200,7 +201,7 @@
 <aside class="sidebar">
     <ul class="navbar-nav side-menu">
         <li class="nav-item">
-            <a class="nav-link active item" href="#">
+            <a class="nav-link item" href="../index.html">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">About</span>
@@ -215,8 +216,196 @@
 
 
 <main class="content-page bg-dark">
+    <section class="h-100 h-custom gradient-custom-2">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12">
+                    <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                        <div class="card-body p-0">
+                            <div class="row g-0">
+                                <div class="col-lg-6">
+                                    <div class="p-5">
+                                        <h3 class="fw-normal mb-5" style="color: #4835d4;">General Infomation</h3>
 
+                                        <div class="mb-4 pb-2">
+                                            <select class="select">
+                                                <option value="1">Title</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                                <option value="4">Four</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4 pb-2">
+
+                                                <div class="form-outline">
+                                                    <input class="form-control form-control-lg" id="form3Examplev2"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplev2">First name</label>
+                                                </div>
+
+                                            </div>
+                                            <div class="col-md-6 mb-4 pb-2">
+
+                                                <div class="form-outline">
+                                                    <input class="form-control form-control-lg" id="form3Examplev3"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplev3">Last name</label>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <select class="select">
+                                                <option value="1">Position</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                                <option value="4">Four</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline">
+                                                <input class="form-control form-control-lg" id="form3Examplev4"
+                                                       type="text"/>
+                                                <label class="form-label" for="form3Examplev4">Position</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                                                <div class="form-outline">
+                                                    <input class="form-control form-control-lg" id="form3Examplev5"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplev5">Bussines
+                                                        Arena</label>
+                                                </div>
+
+                                            </div>
+                                            <div class="col-md-6">
+
+                                                <select class="select">
+                                                    <option value="1">Employees</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                    <option value="4">Four</option>
+                                                </select>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 bg-indigo text-white">
+                                    <div class="p-5">
+                                        <h3 class="fw-normal mb-5">Contact Details</h3>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline form-white">
+                                                <input class="form-control form-control-lg" id="form3Examplea2"
+                                                       type="text"/>
+                                                <label class="form-label" for="form3Examplea2">Street + Nr</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline form-white">
+                                                <input class="form-control form-control-lg" id="form3Examplea3"
+                                                       type="text"/>
+                                                <label class="form-label" for="form3Examplea3">Additional
+                                                    Information</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-5 mb-4 pb-2">
+
+                                                <div class="form-outline form-white">
+                                                    <input class="form-control form-control-lg" id="form3Examplea4"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplea4">Zip Code</label>
+                                                </div>
+
+                                            </div>
+                                            <div class="col-md-7 mb-4 pb-2">
+
+                                                <div class="form-outline form-white">
+                                                    <input class="form-control form-control-lg" id="form3Examplea5"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplea5">Place</label>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4 pb-2">
+                                            <div class="form-outline form-white">
+                                                <input class="form-control form-control-lg" id="form3Examplea6"
+                                                       type="text"/>
+                                                <label class="form-label" for="form3Examplea6">Country</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-5 mb-4 pb-2">
+
+                                                <div class="form-outline form-white">
+                                                    <input class="form-control form-control-lg" id="form3Examplea7"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplea7">Code +</label>
+                                                </div>
+
+                                            </div>
+                                            <div class="col-md-7 mb-4 pb-2">
+
+                                                <div class="form-outline form-white">
+                                                    <input class="form-control form-control-lg" id="form3Examplea8"
+                                                           type="text"/>
+                                                    <label class="form-label" for="form3Examplea8">Phone Number</label>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4">
+                                            <div class="form-outline form-white">
+                                                <input class="form-control form-control-lg" id="form3Examplea9"
+                                                       type="text"/>
+                                                <label class="form-label" for="form3Examplea9">Your Email</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-check d-flex justify-content-start mb-4 pb-3">
+                                            <input
+                                                    class="form-check-input me-3"
+                                                    id="form2Example3c"
+                                                    type="checkbox"
+                                                    value=""
+                                            />
+                                            <label class="form-check-label text-white" for="form2Example3c">
+                                                I do accept the <a class="text-white" href="#!"><u>Terms and
+                                                Conditions</u></a> of your site.
+                                            </label>
+                                        </div>
+
+                                        <button class="btn btn-light btn-lg" data-mdb-ripple-color="dark" type="button">
+                                            Register
+                                        </button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
+
 <script src="../DashboardHandlers.js"></script>
 </body>
 </html>
