--- a/Table/Table.html
+++ b/Table/Table.html
@@ -27,9 +27,9 @@
     </a>
     <div class="dropdown-menu show" data-popper-placement="bottom-start" style="display: none;">
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="../New%20Student/NewStudent.html">
             <i class="fe-briefcase me-1"></i>
-            <span>New Projects</span>
+            <span>Add New Student</span>
         </a>
 
         <!-- item-->
