--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </a>
     <div class="dropdown-menu show" data-popper-placement="bottom-start" style="display: none;">
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="./New%20Student/NewStudent.html">
             <i class="fe-briefcase me-1"></i>
-            <span>New Projects</span>
+            <span>Add New Student</span>
         </a>
 
         <!-- item-->
@@ -63,7 +63,8 @@
     <!--Search Bar-->
     <div class="d-flex ml-auto" style="align-items: center;">
         <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
-               style="width: 300px; border-radius: 24px; height: 38px" type="text">
+               style="width: 300px; border-radius: 24px; height: 38px;" type="text">
+        <img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-512.png" style="width: 20px; height: 25px; position: relative; transform: translateX(-39px)">
 
         <!--Notification icon-->
         <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
