update login functionality

--- a/Table/Table.html
+++ b/Table/Table.html
@@ -180,8 +180,7 @@
         </div>
 
         <!--Name option-->
-        <a class="nav-link dropdown-toggle nav-user me-0 waves-effect waves-light text-white"
-           data-bs-toggle="dropdown" href="#"
+        <a class="nav-link nav-user me-0 waves-effect waves-light text-white" href="#"
            role="button" style="font-size: 13px">
             <img class="rounded-circle" style="background: white; width: 32px; height: 32px">
             <span class="pro-user-name ms-1">Name</span>
