--- a/Login/ForgotPassword.html
+++ b/Login/ForgotPassword.html
@@ -32,7 +32,7 @@
                     <br>
                     <div class="form-group">
                         <input class="btn btn-primary btn-lg btn-block myBtn" id="forgot-btn" type="submit"
-                               value="Reset Password"/>
+                               value="Reset Password" onclick= "window.open('loginPage.html')"/>
                     </div>
                 </form>
             </div>
