--- a/index.html
+++ b/index.html
@@ -321,8 +321,21 @@
 
 
 </main>
-<footer>
-
+<footer class="footer bg-dark">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <script>document.write(new Date().getFullYear())</script> © Codefox theme by <a href="">Coderthemes</a>
+            </div>
+            <div class="col-md-6">
+                <div class="text-md-end footer-links d-none d-sm-block">
+                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
+                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
+                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 <script src="DashboardHandlers.js"></script>
 </body>
